# LearnCMakeStepByStep

./: README.md
1.HowToIncludeCMakeCode/src/: CMakeLists.txt
10.RecursionDirAndLinkLib(AddIncludeFile,BadExample)/: delete_default.bat
10.RecursionDirAndLinkLib(AddIncludeFile,BadExample)/src/test1/test2/: CMakeLists.txt
10.RecursionDirAndLinkLib(AddIncludeFile,BadExample)/src/test1/test2/test3/: CMakeLists.txt
10.SourceGroup(SrcDirTreeMapToIDE)/src/: main.cpp
11.SourceGroup(SrcDirTreeMapToIDE)/src/: CMakeLists.txt
11.SourceGroup(SrcDirTreeMapToIDE_CreateFileInIDESuccess)/src/CMakeHelp/: PathHelp.cmake
12.MostSimpleTreeMap/src/CMakeHelp/: PathHelp.cmake
12.SourceGroup(SrcDirTreeMapToIDE_CreateFileInIDESuccess)/src/: CMakeLists.txt
13.MostSimpleTreeMap/src/: CMakeLists.txt  main.cpp
13.MultiTestTreeMap/src/LibName/LibDir1/: LibHead1.h
13.MultiTestTreeMap/src/LibName/LibDir3/: LibHead3.h
14.MultiTestMultiLibTreeMap/src/CMakeHelp/: PathHelp.cmake
14.MultiTestMultiLibTreeMap/test/Lib3Test/001_Lib3Test/: main.cpp
14.MultiTestTreeMap/src/: CMakeLists.txt  main.cpp
14.MultiTestTreeMap/src/CMakeHelp/: PathHelp.cmake
14.MultiTestTreeMap/src/LibName/LibDir1/: LibHead1.cpp
14.MultiTestTreeMap/test/Test1/: main.cpp
14.MultiTestTreeMap/test/Test2/: main.cpp
14.MultiTestTreeMap/test/Test3/: CMakeLists.txt  main.cpp
15.CMakeGenCPlusDLL/src/CMakeHelp/: PathHelp.cmake
15.MultiTestMultiLibTreeMap/src/: main.cpp
15.MultiTestMultiLibTreeMap/test/Lib1Test/001_Lib1Test/: CMakeLists.txt  main.cpp
15.MultiTestMultiLibTreeMap/test/Lib2Test/001_Lib2Test/: CMakeLists.txt  main.cpp
15.MultiTestMultiLibTreeMap/test/Lib3Test/001_Lib3Test/: CMakeLists.txt
16.CMakeGenCPlusDLL/src/: CMakeLists.txt  main.cpp
16.CMakeGenCPlusDLL/test/Lib1Test/001_Lib1Test/: main.cpp
17.CrossCompileAndroidCplusWithAssemblyTest/: CMakeLists.txt  assembly.s  build_android.bat  main.cpp  push_android.bat
18.MacOSCPlusWithAssemblyTest/: CMakeLists.txt  assembly.s  build_default.sh  main.cpp
2.MostSimpleProject/src/: CMakeLists.txt
3.FunctionScope/src/: CMakeLists.txt
4.MarcoScope/src/: CMakeLists.txt
5.CollectsAllSourceInDir/src/: CMakeLists.txt  main.cpp  test.cpp  test.h
6.LibTest/: CMakeLists.txt  build_default.bat
6.LibTest/include/: LibTest.h
6.LibTest/src/: LibTest_Shared.cpp  LibTest_Static.cpp  main.cpp
6.RecursionDirAndLinkLib/src/: CMakeLists.txt
6.RecursionDirAndLinkLib/src/CMakeHelp/: PathHelp.cmake
6.RecursionDirAndLinkLib/src/test1/test2/: CMakeLists.txt
7.RecursionDirAndLinkLib(FileCanSameName)/: build_default.bat
7.RecursionDirAndLinkLib(FileCanSameName)/src/test1/: test.cpp
7.RecursionDirAndLinkLib(FileCanSameName)/src/test1/test2/: test.cpp
8.RecursionDirAndLinkLib(AddIncludeFile)/src/: main.cpp
8.RecursionDirAndLinkLib(AddIncludeFile)/src/test1/: CMakeLists.txt  test1.cpp
8.RecursionDirAndLinkLib(AddIncludeFile)/src/test1/test2/: test2.cpp
8.RecursionDirAndLinkLib(AddIncludeFile)/src/test1/test2/test3/: CMakeLists.txt
8.RecursionDirAndLinkLib(FileCanSameName)/src/: CMakeLists.txt  main.cpp
8.RecursionDirAndLinkLib(FileCanSameName)/src/test1/: CMakeLists.txt
8.RecursionDirAndLinkLib(FileCanSameName)/src/test1/test2/test3/: CMakeLists.txt  test.cpp
9.RecursionDirAndLinkLib(AddIncludeFile)/src/: CMakeLists.txt
9.RecursionDirAndLinkLib(AddIncludeFile)/src/test1/test2/: CMakeLists.txt
9.RecursionDirAndLinkLib(AddIncludeFile,BadExample)/src/: CMakeLists.txt
9.RecursionDirAndLinkLib(AddIncludeFile,BadExample)/src/test1/: CMakeLists.txt
